--- a/css/style.css
+++ b/css/style.css
@@ -41,29 +41,58 @@ padding: 3% 2%;
 .text-section h1{
     font-weight: 700;
 }
-/* valuable-desk */
+/* valuable-desk & hall-of-fame */
 .nested-grid{
     min-height: 100vh;
-    padding-top: 5%;
+    padding: 6% 0;
+    
     background-color: #019267;
     
 }
 .nested-grid .card{
 background: rgba( 255, 255, 255, 0.15 );
-box-shadow: 15px 2px 13px 1px rgba(0, 0, 0, 0.37);
+box-shadow: 15px 2px 10px 3px rgba(0, 0, 0, 0.37);
 backdrop-filter: blur( 7.5px );
 -webkit-backdrop-filter: blur( 7.5px );
 border-radius: 15px;
 color: #F5F5F5;
 }
-.nested-grid .card:hover{
+#valuable-desk.nested-grid .card:hover{
     background: transparent;
 box-shadow: 15px 10px 13px 8px rgba(0, 0, 0, 0.37);
+
+}
+#hall-of-fame.nested-grid .card{
+    box-shadow: -15px 2px 10px 3px rgba(0, 0, 0, 0.37);
+
+}
+#hall-of-fame.nested-grid .card:hover{
+    background: transparent;
+    box-shadow: -15px 10px 13px 8px rgba(0, 0, 0, 0.37);
 
 }
 .nested-grid h1{
         font-weight: 700;
         color: aliceblue;
+
+}
+.nested-grid h6{
+    font-style: oblique;
+}
+.nested-grid p{
+    color:#E8F9FD;
+}
+.nested-grid p span{
+    color:#FEDB39;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+}
+#hall-of-fame img{
+    background-color:#FEDB39;
+}
+/* our-achievers-work-with */
+#our-achievers-work-with h1{
+        font-weight: 700;
 
 }
 @media only screen and (max-width: 767px) {
