--- a/css/style.css
+++ b/css/style.css
@@ -90,11 +90,45 @@ box-shadow: 15px 10px 13px 8px rgba(0, 0, 0, 0.37);
 #hall-of-fame img{
     background-color:#FEDB39;
 }
-/* our-achievers-work-with */
-#our-achievers-work-with h1{
+/* our-achievers-work-with & our-achievements*/
+#our-achievers-work-with h1,#our-achievements h1{
         font-weight: 700;
 
 }
+#our-achievers-work-with img:hover{
+    background-color:azure;
+    box-shadow: 6px 5px 10px 3px rgba(0, 0, 0, 0.37);
+
+
+}
+#our-achievements .col-6 div{
+    padding: 3% 6%;
+background: rgba( 255, 255, 255, 0.15 );
+box-shadow: 6px 2px 10px  rgba(0, 0, 0, 0.37);
+backdrop-filter: blur( 7.5px );
+-webkit-backdrop-filter: blur( 7.5px );
+border-radius: 10px;
+margin: 5% 0;
+}
+#our-achievements .col-6 h1{
+    color: #019267;
+margin-bottom: 10%;
+}
+#our-achievements .col-6 div:hover h1{
+    color:green;
+
+}
+#our-achievements .col-6 div:hover span{
+    color: crimson;
+    font-weight: 700;
+}
+#our-achievements .col-6 div:hover{
+    box-shadow: 6px 6px 10px 3px rgba(0, 0, 0, 0.37);
+
+}
+
+
+/* media-query */
 @media only screen and (max-width: 767px) {
     /* navbar */
 
