adding functionality to see students's department in result page

--- a/views/result.ejs
+++ b/views/result.ejs
@@ -57,6 +57,7 @@
       <div>
         <h2>Name : <span><%=doc.name %> </span></h2>
         <h2>Roll-No : <span><%=doc.rollNo %> </span></h2>
+        <h2>Roll-No : <span><%=doc.department %> </span></h2>
       </div>
       <div>
         <img
@@ -81,6 +82,5 @@
         <% } %>
       </div>
     </div>
-  
   </body>
 </html>
